--- a/Assignment/20240429_1.ipynb
+++ b/Assignment/20240429_1.ipynb
@@ -171,6 +171,40 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "while True:\n",
+        "  for i in range(1, 7):\n",
+        "    randNum = random.randint(1, 49)\n",
+        "    print(randNum, end = ' ')\n",
+        "  print()\n",
+        "  again - eval(input('cotinue:1 or quit:0 ---->'))\n",
+        "  if again == 0:\n",
+        "    break\n",
+        "print('Over')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TOwET62GoaHI",
+        "outputId": "bf17d88b-f101-4c9d-a633-8f02380f4818"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "26 28 8 2 8 14 \n",
+            "cotinue:1 or quit:0 ---->1\n",
+            "Over\n"
+          ]
+        }
+      ]
     }
   ]
 }
